Fix up negative spacing and use a different header image

--- a/wonder/romeo/static/scss/_components/_components.masthead--home.scss
+++ b/wonder/romeo/static/scss/_components/_components.masthead--home.scss
@@ -3,8 +3,8 @@
 .masthead--header {
   overflow: hidden;
   padding: 0;
-  padding-top: $base-spacing-unit * 8;
-  padding-bottom: $base-spacing-unit * 8;
+  padding-top: $base-spacing-unit * 4;
+  padding-bottom: $base-spacing-unit * 2;
   margin-bottom: 0;
   position: relative;
   background-repeat: no-repeat;
