--- a/wonder/romeo/static/scss/_components/_components.page-section.scss
+++ b/wonder/romeo/static/scss/_components/_components.page-section.scss
@@ -2,7 +2,7 @@
  * _components.page-section.scss
  */
 .page-section--feature {
-  padding-top:    $base-spacing-unit * 4;
-  padding-bottom: $base-spacing-unit * 4;
+  padding-top:    $base-spacing-unit;
+  padding-bottom: $base-spacing-unit;
   border-top: 1px solid rgba(112,121,123,0.25);
 }
